classDiagram
    %% Auth domain: models, exceptions, and secondary ports.

    class DomainException {
        <<abstract>>
        #DomainException(message: String)
        #DomainException(message: String, cause: Throwable)
    }

    class AuthenticationFailedException {
        <<exception>>
    }
    class GoogleAuthException {
        <<exception>>
    }
    class TokenException {
        <<exception>>
    }
    class UserAlreadyExistsException {
        <<exception>>
    }
    class UserNotFoundException {
        <<exception>>
    }

    class User {
        <<model>>
        -id: EntityId
        -authorizationId: String
        -email: String
        -name: String
        -createAt: Instant
    }

    class UserSession {
        <<record>>
        -token: String
        -user: User
        +isActive() boolean
        +email() String
        +name() String
        +googleId() String
    }

    class GoogleUserInfo {
        <<record>>
        -id: String
        -email: String
        -name: String
        -pictureUrl: String
    }

    class TokenClaims {
        <<record>>
        -user: User
        -issuedAt: Instant
        -expiresAt: Instant
    }

    class GoogleAuthClient {
        <<secondaryPort>>
        +exchangeCodeForUserInfo(authorizationCode: String, redirectUri: String) Mono~GoogleUserInfo~
    }

    class TokenGenerator {
        <<secondaryPort>>
        +generateToken(claims: TokenClaims) String
        +createClaimsFromUser(user: User) TokenClaims
        +extractUserId(token: String) UUID
        +validateToken(token: String) TokenClaims
    }

    DomainException <|-- AuthenticationFailedException : extends
    DomainException <|-- GoogleAuthException : extends
    DomainException <|-- TokenException : extends
    DomainException <|-- UserAlreadyExistsException : extends
    DomainException <|-- UserNotFoundException : extends

    UserSession --> User : contains
    TokenClaims --> User : contains
    TokenGenerator ..> TokenClaims : uses
    GoogleAuthClient ..> GoogleUserInfo : produces

    %% EntityId is the shared kernel value object at com.myvanitys.api.common.valueobject.EntityId.
    %% DomainException is at com.myvanitys.api.common.DomainException.
